# generalization_riccati

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bechmark/cart_pendulum_problem/rockit_generated/: casadi_codegen.c  problem_information.h
bechmark/random_problem/: random_matrix.hpp
src/: CMakeLists.txt  Riccati.hpp
src/benchmark_auxilary/: benchmark_gen_riccati.hpp  benchmark_helpers.hpp  benchmark_paper.cpp  benchmark_quadrotor.cpp  benchmark_random.cpp  benchmark_sparse.hpp  fatrop_problem_wrap.hpp
src/benchmark_auxilary/cart_pendulum_problem/: cart_pendulum.hpp
src/benchmark_auxilary/cart_pendulum_problem/rockit_generated/: casadi_codegen.c  problem_information.h
src/benchmark_auxilary/quadrotor_problem/: quadrotor.hpp
src/benchmark_auxilary/quadrotor_problem/rockit_generated/: casadi_codegen.c  problem_information.h
src/benchmark_auxilary/random_problem/: random_matrix.hpp  random_ocp.hpp
src/benchmark_paper/: create_cart_pendulum_problem.hpp
src/cart_pendulum_problem/: create_stageocp.cpp
src/gen_riccati/: blasfeo_wrapper.cpp  blasfeo_wrapper.hpp  cocp.hpp  cocp_dims.hpp  gen_riccati.cpp  gen_riccati.hpp  numeric_vector.hpp
src/symspals/: common.hpp  expressions.hpp  expressions_example.cpp  sparse_system.hpp  sparse_system_example.cpp  symspals.cpp  timing.c
src/symspals/interfaces/: ma57.hpp  mumps.hpp  pardiso.hpp  sparse_solver_interface.cpp  sparse_solver_interface.hpp
